# bitang

./: .gitignore  .windsurfrules  Cargo.toml  README.md  deny.toml  format-ron.cmd  rustfmt.toml  tree.txt
.run/: Cargo bloat .run.xml  Cargo bloat crates.run.xml  Cargo check.run.xml  Cargo clippy.run.xml  Cargo fix.run.xml  Run bitang (dev-nowarn).run.xml  Run bitang (release).run.xml  Run bitang.run.xml
app/: demo.ron  file.blend  fs.glsl  header.glsl  kocka301.blend  test2.blend  test2.blend1  vs.glsl  vs2.glsl
app/project-test/: project.yaml
app/project-test/scene1/: scene.run.ron  scene.yaml  splines.yaml
app/test-chart/: chart.ron
content/: project.ron
content/charts/test-chart/: chart.ron  fs.glsl  vs.glsl
crates/bitang/: Cargo.toml
crates/bitang/src/: main.rs  types.rs
crates/bitang/src/control/: bezier_spline.rs  controls.rs  mod.rs  spline.rs
crates/bitang/src/document/: chart.rs  compute.rs  draw.rs  generate_mip_levels.rs  mod.rs  pass.rs  project.rs  render_object.rs  scene.rs
crates/bitang/src/engine/: camera.rs  chart.rs  compute.rs  draw.rs  generate_mip_levels.rs  material.rs  mod.rs  pass.rs  project.rs  render_object.rs  scene.rs
crates/bitang/src/engine/control/: controls.rs  mod.rs  spline.rs
crates/bitang/src/engine/core/: compute_call.rs  context.rs  double_buffer.rs  draw_call.rs  globals.rs  image.rs  mesh.rs  mipmap_generator.rs  mod.rs  shader.rs
crates/bitang/src/engine/graph/: mod.rs
crates/bitang/src/engine/render/: compute_call.rs  draw_call.rs  image.rs  mesh.rs  mod.rs  shader.rs
crates/bitang/src/file/: binary_file_cache.rs  chart_file.rs  file_hash_cache.rs  material.rs  mod.rs  object.rs  project_file.rs  resource_repository.rs  scene.rs  shader_context.rs  shader_loader.rs
crates/bitang/src/loader/: async_cache.rs  blend_loader.rs  cache.rs  concurrent_cache.rs  file_cache.rs  gltf_loader.rs  mod.rs  project_loader.rs  resource_cache.rs  resource_path.rs  resource_repository.rs  shader_cache.rs  shader_compiler.rs  shader_loader.rs
crates/bitang/src/render/: buffer.rs  buffer_generator.rs  camera.rs  chart.rs  compute.rs  compute_call.rs  double_buffer.rs  draw.rs  draw_call.rs  generate_mip_levels.rs  image.rs  material.rs  mesh.rs  mipmap_generator.rs  mod.rs  pass.rs  project.rs  render_object.rs  render_target.rs  render_unit.rs  sampler.rs  scene.rs  shader.rs  vulkan_window.rs
crates/bitang/src/tool/: app_config.rs  app_state.rs  content_renderer.rs  demo_tool.rs  mod.rs  music_player.rs  spline_editor.rs  timer.rs  ui.rs  vulkan_window.rs
crates/bitang/src/tool/runners/: frame_dump_runner.rs  frame_dump_runner_old.rs  mod.rs  window_runner.rs
crates/bitang_utils/: Cargo.toml
crates/bitang_utils/src/: blend_loader.rs
crates/egui-patch/: clippy.toml
crates/egui-patch/crates/egui/src/widgets/plot/: mod.rs
crates/egui-wgpu-patch/: Cargo.toml
crates/egui-wgpu-patch/src/: canvas.rs  capture.rs  lib.rs  renderer.rs  setup.rs  winit.rs
demo/: project.ron
demo/charts/particle_base/: chart.ron  controls.ron  cube.wgsl  particles.wgsl
demo/charts/sample-chart-1/: backdrop.fs.glsl  backdrop.fs.wgsl  backdrop.vs.glsl  backdrop.wgsl  chart.ron  common.glsl  common2.glsl  controls.ron  demo-default.glb  fs-duck.glsl  fs-noop.glsl  fs-noop.wgsl  fs.glsl  fs.wgsl  medieval_cafe_1k.jxl  particles-init.cs.glsl  particles-init.cs.wgsl  particles-simulate.cs.glsl  plane_xz.glb  vs-duck.glsl  vs.glsl  vs.wgsl
demo/charts/sample_chart_1/: backdrop.wgsl  backdrop_fs.wgsl  backdrop_vs.wgsl  chart.ron  controls.ron  duck.wgsl  external.wgsl  fs-duck.glsl  fs.glsl  particles.glsl  particles.wgsl  vs.glsl
demo/charts/sample_chart_2/: chart.ron  duck.wgsl  particle.wgsl  particles.wgsl  particles_simulate_cs.wgsl  vs.wgsl
demo/common/: cube.glb  smooth_cube.glb  sphere.glb
demo/duck/: Duck_002.mtl  duck.glb
demo/post/: copy-clamp.fs.glsl  copy.fs.glsl  dof.fs.glsl  fade.fs.glsl  fade.vs.glsl  gauss-horizontal-noglow.fs.glsl  gauss-horizontal.fs.glsl  gauss-vertical.fs.glsl  gauss_params.glsl  post-compose.fs.glsl  post.fs.glsl  post.vs.glsl
demo/shaders/: common.glsl  common2.glsl  cook_torrance_brdf.glsl  cook_torrance_brdf.wgsl  fullscreen_vs.wgsl  image_based_lighting.glsl  image_based_lighting.wgsl  math.glsl  math.wgsl  pbr.wgsl  quaternion.wgsl
demo/shaders/post/: compose.fs.glsl  compose.fs.wgsl  compose.vs.glsl  compose_fs.wgsl  dof-singlepass.fs.glsl  dof-singlepass.fs.wgsl  dof_singlepass_fs.wgsl  gamma.glsl  gamma_compress.fs.glsl  gamma_compress_fs.wgsl  gauss_horizontal.fs.glsl  gauss_horizontal.fs.wgsl  gauss_params.glsl  gauss_vertical.fs.glsl  gauss_vertical.fs.wgsl
src/: draw.rs  gui.rs  main.rs  types.rs
src/control/: controls.rs  mod.rs
src/file/: binary_file_cache.rs  blend_loader.rs  file_hash_cache.rs  mod.rs  resource_cache.rs  resource_repository.rs  ron_file_dom.rs  shader_cache.rs  shader_loader.rs
src/render/: material.rs  mesh.rs  mod.rs  render_target.rs  render_unit.rs  shader.rs  shader_context.rs  vulkan_renderer.rs  vulkan_window.rs
src/shaders/src/: 26-shader-depth.frag
src/tool/: demo_tool.rs  demo_tool2.rs  mod.rs  ui.rs
src/utility/: constants.rs  fps_limiter.rs  window.rs
src/utility/share/: v1.rs
