[workspace]
members = [
    "crates/bitang",
]
resolver = "2"

[profile.dev.package."*"]
opt-level = "s"
overflow-checks = false
debug = false

[profile.dev.package.bitang]
opt-level = 0
overflow-checks = true
debug = true

[profile.dev.package.vulkano]
opt-level = 2

[profile.dev-nowarn]
inherits = "dev"

[profile.release-min]
inherits = "release"
strip = true
lto = true
panic = "abort"
opt-level = "s"