[workspace]
members = [
    "crates/bitang",
]
resolver = "2"

[workspace.package]
edition = "2021"

[profile.dev.package."*"]
opt-level = "s"
debug = false

[profile.dev.package.bitang]
opt-level = 0
overflow-checks = true
debug = true

[profile.dev-nowarn]
inherits = "dev"

[profile.release-min]
inherits = "release"
strip = true
lto = true
panic = "abort"
opt-level = "s"
