[package]
name = "bitang"
version = "0.0.0"
edition.workspace = true

[dependencies]
anyhow = { version = "1.0.79", features = ["backtrace"] }
itertools = "0.12.1"
strum = { version = "0.26.1", features = ["derive"] }
smallvec = "1.11.0"
bytemuck = "1.21.0"

tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["fmt", "env-filter"] }
nu-ansi-term = "*"
codespan-reporting = "0.11.1"

eframe = { version = "0.31", features = ["wgpu"] }
egui-wgpu = { version = "0.31" }
egui_plot = "0.31"
egui = "0.31"
wgpu = { version = "*", features = ["spirv"] }

naga = { version = "*", features = ["spv-out", "wgsl-in"] }
spirq = "1.2.2"
glam = "0.25"

ahash = "0.8.7"
dashmap = "5.5.3"
tokio = { version = "1.36.0", features = ["fs", "rt-multi-thread", "sync"] }
futures = "0.3.30"
num_cpus = "*"
parking_lot = { version = "0.12", features = ["serde"] }

serde = { version = "*", features = ["derive", "rc"] }
notify = "5.1.0"
image = { version = "0.24.8", default-features = false, features = ["jpeg", "png"] }
ron = "0.8"
gltf = "1.4.0"
dunce = "1.0.4"
jxl-oxide = "0.8.1"

rodio = { version = "0.17.3", default-features = false, features = ["mp3"] }
build-time = "0.1.3"
